Added description to search results

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,6 +5,10 @@
     <link rel="icon" type="image/svg+xml" href="/league_icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>LoL Connections</title>
+    <meta
+      name="description"
+      content="Play LOL Connections, a daily word puzzle inspired by NYT Connections. Find 4 groups of 4 League of Legends Champions. New puzzle every day!"
+    />
   </head>
   <!-- Google tag (gtag.js) -->
   <script
